--- a/CSScolors.codawebscriptsidebar/Info.plist
+++ b/CSScolors.codawebscriptsidebar/Info.plist
@@ -17,13 +17,13 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.1</string>
+	<string>1.2</string>
 	<key>CodaPlugInSupportedAPIVersion</key>
 	<integer>6</integer>
 	<key>CodaDescriptionString</key>
 	<string>A Simple color palette of CSS named colors</string>
 	<key>CodaIconMaskTintString</key>
-	<string>#91B05A</string>
+	<string>#6d4cba</string>
 	<key>CodaAuthorString</key>
 	<string>D.G. Midwinter</string>
 </dict>
